<resources>
    <string name="app_name">Menu</string>
    <string name="dish_name">Dish Name</string>
    <string name="cn_name">cn Name</string>
    <string name="price">Price</string>
    <string name="print">Print</string>
    <string name="customer_print">Customer Print</string>
    <string name="total">Total</string>
    <string name="total_price">Total Price</string>
    <string name="search">Search</string>
    <string name="popular_dishes">Popular Dishes</string>
    <string name="dishes">Dishes</string>
    <string name="shopping_cart">Shopping cart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dish_page_dish_id">%1$s</string>
    <string name="dish_page_dish_name">%1$s</string>
    <string name="dish_page_chinese_name">%1$s</string>
    <string name="dish_page_staff_chinese_name">%1$s</string>
    <string name="dish_page_price">%.2f</string>
    <string name="dish_number_title">Dish number: &#160;</string>
    <string name="dish_name_title">Dish name: &#160;</string>
    <string name="dish_chinese_name_title">Chinese name: &#160;</string>
    <string name="staff_chinese_name_title">Staff Chinese Name: &#160;</string>
    <string name="dish_page_price_title">Price: £</string>
    <string name="delete_dish">Delete Dish</string>
    <string name="edit_dish_btn">Edit</string>
    <string name="add_new_dish">Add dish</string>
    <string name="save">Save</string>
    <string name="basket_dish_price">£0.00</string>
    <string name="basket_dish_counter">1</string>
    <string name="basket_total_price_title">Total: &#160;</string>
    <string name="basket_total_price">0.00</string>
    <string name="estimated_time_title">Estimated Time: &#160;</string>
    <string name="estimated_time">0 &#160;</string>
    <string name="actual_time_title">Actual Time: &#160;</string>
    <string name="actual_time">7:30</string>
    <string name="estimated_time_mins">mins</string>
    <string name="pm">pm</string>
    <string name="basket_dish_counter_x">x</string>
    <string name="basket_notes">notes</string>
    <string name="set_time">Set Time</string>
    <string name="add_5_mins">+5 mins</string>
    <string name="basket_order">Order</string>
    <string name="view_basket">View Basket</string>
    <string name="cancel">Cancel</string>
    <string name="bill_name">Bill Name</string>
    <string name="bill_name_txt">Bill name: &#160;</string>
    <string name="name">name</string>
    <string name="time_ordered">Time ordered: &#160;</string>
    <string name="date">Date</string>
    <string name="kitchen_print">Kitchen Print</string>
    <string name="chinese_print">Chinese Print</string>
</resources>