<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <!-- List of dishes in the basket -->
    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/dish_basket_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"/>

    <!-- Total price of the basket -->
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/totalPriceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/basket_total_price_title"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_toStartOf="@id/total_basket_price"/>

        <TextView
                android:id="@+id/total_basket_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/basket_total_price"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginEnd="20dp"
                android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <!-- Estimated time for order completion -->
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical">

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/estimatedTimeTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/estimated_time_title"
                        android:textStyle="bold"
                        android:layout_marginStart="10dp"
                        android:layout_gravity="center_vertical"/>

                <TextView
                    android:id="@+id/estimatedTimeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/estimated_time"
                    android:textStyle="bold|italic"
                    android:layout_gravity="center_vertical"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/estimatedTimeMins"
                        android:text="@string/estimated_time_mins"
                        android:layout_marginEnd="5dp"
                        android:textStyle="bold|italic"
                        android:layout_gravity="center_vertical"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/actualTimeTextView_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/actual_time_title"
                        android:textStyle="bold"
                        android:layout_marginStart="10dp"
                        android:layout_gravity="center_vertical"/>

                <TextView
                        android:id="@+id/actualTimeTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/actual_time"
                        android:textStyle="bold"/>

            </LinearLayout>

        </LinearLayout>

        <!-- Button to increase estimated time -->
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/increaseTimeButton"
                android:text="@string/add_5_mins"
                android:padding="3dp"
                android:layout_margin="5dp"
                android:layout_gravity="center_vertical"/>

        <!-- Button to set actual estimated time -->
        <Button
                android:id="@+id/actualTimeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_time"
                android:layout_margin="5dp"
                android:padding="2dp"
                android:layout_gravity="center_vertical"
                style="@style/ThemeOverlay.Material3.Button.TextButton"/>

    </LinearLayout>

    <!-- Order button -->
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="16dp"
            android:text="@string/basket_order"
            android:textSize="20sp"
            style="@style/Widget.Material3.Button"/>

</LinearLayout>