<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <!-- List of dishes in the basket -->

    <!-- Total price of the basket -->

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/dish_basket_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/totalPriceLayout"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_alignParentTop="true"/>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/totalPriceLayout"
            android:layout_above="@id/estimated_time_layout">

        <TextView
                android:id="@+id/totalPriceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/basket_total_price_title"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_toStartOf="@id/total_basket_price" />

        <TextView
                android:id="@+id/total_basket_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/basket_total_price"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginEnd="20dp"
                android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <!-- Estimated time for order completion -->
    <LinearLayout
            android:id="@+id/estimated_time_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_above="@id/orderButton"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp">

        <!-- Times ===============================================-->
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/estimatedTimeTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/estimated_time_title"
                        android:textStyle="bold"
                        android:layout_marginStart="10dp"
                        android:layout_gravity="center_vertical"/>

                <TextView
                        android:id="@+id/estimatedTimeTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/estimated_time"
                        android:textStyle="bold|italic"
                        android:layout_gravity="center_vertical"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/estimatedTimeMins"
                        android:text="@string/estimated_time_mins"
                        android:layout_marginEnd="5dp"
                        android:textStyle="bold|italic"
                        android:layout_gravity="center_vertical"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/actualTimeTextView_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/actual_time_title"
                        android:textStyle="bold"
                        android:layout_marginStart="10dp"
                        android:layout_gravity="center_vertical"/>

                <TextView
                        android:id="@+id/actualTimeTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/actual_time"
                        android:textStyle="bold"/>

            </LinearLayout>

        </LinearLayout>
    <!-- Buttons for Increase Time and Set Time -->
    <LinearLayout
            android:id="@+id/basket_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/estimated_time_layout"
            android:layout_above="@+id/orderButton">

        <!-- Button to increase estimated time -->
        <Button
                android:id="@+id/increaseTimeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_5_mins"
                android:padding="3dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                style="@style/Widget.Material3.Button"/>

        <!-- Button to set actual estimated time -->
        <Button
                android:id="@+id/actualTimeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_time"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:padding="2dp"
                android:layout_weight="1"
                style="@style/Widget.Material3.Button"/>

        <Button
                android:id="@+id/billNameButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Bill Name"
                android:padding="2dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                style="@style/Widget.Material3.Button"/>

    </LinearLayout>

    <!-- Order button -->
    <Button
            android:id="@+id/orderButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="16dp"
            android:text="@string/basket_order"
            android:textSize="20sp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            style="@style/Widget.Material3.Button"/>

</RelativeLayout>
