<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:padding="16dp">

    <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:titleTextColor="@android:color/white"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/edit_dish_page_toolbar"/>

    <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

            <!-- == Dish number =================================================== -->
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        android:id="@+id/dish_page_id_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dish_number_title"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                <TextView
                        android:id="@+id/dish_page_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dish_page_dish_id"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_toEndOf="@id/dish_page_id_title"/>

                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/dish_page_number_edit"
                        android:visibility="gone"
                        android:layout_toEndOf="@id/dish_page_id_title"/>
            </RelativeLayout>

            <!-- == Dish name ===================================================== -->
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        android:id="@+id/dish_page_name_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8sp"
                        android:text="@string/dish_name_title"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                <TextView
                        android:id="@+id/dish_page_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/dish_page_dish_name"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_toEndOf="@id/dish_page_name_title"/>

                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/dish_page_name_edit"
                        android:layout_toEndOf="@id/dish_page_name_title"
                        android:visibility="gone"/>
            </RelativeLayout>

            <!-- == Chinese name ================================================== -->
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/dish_page_cn_name_title"
                        android:layout_marginTop="8dp"
                        android:text="@string/dish_chinese_name_title"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                <TextView
                        android:id="@+id/dish_page_cn_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/dish_page_chinese_name"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_toEndOf="@id/dish_page_cn_name_title"/>

                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/dish_page_cn_name_edit"
                        android:layout_toEndOf="@id/dish_page_cn_name_title"
                        android:visibility="gone"/>
            </RelativeLayout>

            <!-- == Staff Chinese name ===================================================== -->
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        android:id="@+id/dish_page_staff_name_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/staff_chinese_name_title"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                <TextView
                        android:id="@+id/dish_page_staff_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/dish_page_staff_chinese_name"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_toEndOf="@id/dish_page_staff_name_title"/>

                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/dish_page_staff_name_edit"
                        android:layout_toEndOf="@id/dish_page_staff_name_title"
                        android:visibility="gone"/>
            </RelativeLayout>

            <!-- == Price ===================================================== -->
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/dish_page_price_title"
                        android:layout_marginTop="8dp"
                        android:text="@string/dish_page_price_title"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                <TextView
                        android:id="@+id/dish_page_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/dish_page_price"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_toEndOf="@id/dish_page_price_title"/>

                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/dish_page_price_edit"
                        android:layout_toEndOf="@id/dish_page_price_title"
                        android:visibility="gone"
                        android:inputType="numberDecimal"/>
            </RelativeLayout>

            <!-- == Buttons ===================================================== -->
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <!-- Save button -->
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="16dp"
                        android:id="@+id/dish_page_save_layout"
                        android:visibility="gone">

                    <Button
                            android:id="@+id/dish_page_save_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/save"
                            android:textStyle="bold"
                            android:textSize="15sp"
                            android:layout_weight="1"
                            android:layout_margin="5sp"
                            style="@style/Widget.Material3.Button"/>

                    <Button
                            android:id="@+id/dish_page_cancel_save"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cancel"
                            android:textStyle="bold"
                            android:textSize="15sp"
                            android:layout_weight="1"
                            android:layout_margin="5sp"
                            style="@style/Widget.Material3.Button"/>

                </LinearLayout>

                <!-- Edit and delete buttons -->
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_below="@+id/dish_page_save_layout"
                        android:id="@+id/edit_delete_btns">

                    <Button
                            android:id="@+id/dish_page_edit"
                            android:layout_width="0sp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="10dp"
                            android:text="@string/edit_dish_btn"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            style="@style/Widget.Material3.Button"/>

                    <Button
                            android:id="@+id/dish_page_delete"
                            android:layout_width="0sp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:layout_marginStart="10dp"
                            android:text="@string/delete_dish"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            style="@style/Widget.Material3.Button"/>
                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>